# text-dedup-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Original_README.md  README.md  dedup.ipynb  isolated_dedup.ipynb  pyproject.toml  shard.ipynb  test_python_comparison.sh
.github/workflows/: CI.yml
dedup-bin/: Cargo.toml
dedup-bin/src/: main.rs
dedup-bindings/: Cargo.toml  dedup.ipynb  isolated_dedup.ipynb  pyproject.toml
dedup-bindings/src/: embed.rs  lib.rs  main.rs  union.rs  utils.rs
dedup-core/: Cargo.toml
dedup-core/src/: embed.rs  lib.rs  union.rs
dedup-py/: Cargo.toml
dedup-py/src/: lib.rs  utils.rs
dedup_rs/: Cargo.toml  pyproject.toml
dedup_rs/src/: lib.rs  main.rs  union.rs
docs/: BENCHMARKS.md  FUTURE.md  LEARNING_POINTS.md
src/: args.rs  dedup.rs  embed.rs  lib.rs  main.rs  pyproject.toml  union.rs  utils.rs
src/utils/: dedup_utils.rs  embed.rs  mod.rs  optimal.rs  parquet_utils.rs  types.rs  unionfind.rs
temp_inp_paruqet/: data.parquet
tests/: benchmark_core.py  benchmark_news.py  benchmark_rp.py  sweep_core.py  sweep_news.py  sweep_rust.py  test_bloom_filter.py  test_minhash_spark.py  test_suffix_array.py
text_dedup/: ann_unisim.py  bloom_filter.py  ccnet.py  exact_hash.py  minhash.py  minhash_pure_rs.py  minhash_rust.py  minhash_spark.py  minhash_spark_rust.py  simhash.py  suffix_array.py
text_dedup/utils/: __init__.py  analysis.py  args.py  ftfy_utils.py  hashfunc.py  load.py
utils/: news_copy.py
