[package]
name = "dedup_rs"
version = "0.2.0"
edition = "2021"
authors = ["Wayne Lau", ""]
description = "A Rust library for deduplication of documents"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dedup_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "dedup"
path = "src/dedup.rs"


[dependencies]
pyo3 = "0.24.0"
rand = { version = "0.9.0", features = ["small_rng"] }
sha1 = "0.10.6"
regex = "1.5.4"
rayon = "1.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
arrow = "54.2.1"
parquet = { version = "54.2.1" }
clap = { version = "4.5.7", features = ["derive"] }
byteorder = "1.5.0"
sha3 = "0.10.8"
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
