[build-system]
requires = ["setuptools>=69.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-dedup"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "dedup-rs>=0.3.0", # from pypi
    "numpy>=1.26.4",
    "tqdm>=4.64.1",
    "datasets>=2.17.0, <4.0.0",
    "scipy>=1.10.1",
    "xxhash>=3.0.0",
    "pybloom-live>=4.0.0",
    "bitarray>=2.6.2",
    # "pyspark >= 3.3.1",  # Uncomment if needed
    "regex>=2023.5.5",
    "urllib3<=2.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "zstandard>=0.21.0",
    "ftfy>=6.1.1",
    "setuptools>=69.1.0",
    "psutil>=5.9.8",
    "fire~=0.6.0",
    "click~=8.1.7",
    "click-option-group~=0.5.6",
    "rich~=13.7.1",
    "unisim~=0.0.1"
]

[tool.setuptools]
packages = ["text_dedup", "text_dedup.utils"]

[tool.setuptools.package-data]
text_dedup = ["*.pyi", "py.typed"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "insegel",
    "pytest",
    "coverage",
    "ruff",
    "tabulate",
    "scikit-learn",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
ignore_errors = true
