[package]
name = "dedup-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Standalone binary for deduplication"

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
dedup-core = { path = "../dedup-core" }
arrow = "56.2.0"
parquet = "56.2.0"
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.11.0"

