[package]
name = "dedup-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core deduplication logic library"

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }
sha1 = "0.10.6"
regex = "1.11.3"
rayon = "1.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
byteorder = "1.5.0"
sha3 = "0.10.8"
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = "0.2.19"

