[package]
name = "dedup-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Python extension module for deduplication"

[lib]
name = "dedup_rs"
crate-type = ["cdylib"]

[dependencies]
dedup-core = { path = "../dedup-core" }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
numpy = "0.26.0"
rayon = "1.11.0"
serde_json = "1.0.145"

[dev-dependencies]
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }

