[package]
name = "dedup_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dedup_rs"
crate-type = ["cdylib"]

[[bin]]
name = "embed"
path = "src/embed.rs"

[dependencies]
pyo3 = "0.21.2"
rand = { version = "0.8.4", features = ["small_rng"] }
sha1 = "0.10.6"
regex = "1.5.4"
ndarray = "0.15.4"
byteorder = "1.4.3"
rayon = "1.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
